--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta property="og:title" content="Stanly 링크 모음!">
     <meta property="og:description" content="어서와 코딩은 처음이지?">
-    <meta property="og:image" content="Stanly.png">
+    <meta property="og:image" content="stanly.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title>Stanly - 내 링크모음</title>
     <style>
