--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <div class="wrap">
         <div class="profile"></div>
         <h1>Stanly</h1>
-        <p>코딩.. 좋아하세요?</p>
-        <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
-        <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
+        <p>FreeProgrammer</p>
+        <a target="_blank" href="https://omarian.notion.site/Stanly-Kim-fa5df4ab72c24fac9437ec7768c95ec5">프로필</a>
+        <a target="_blank" href="https://pressco.kr">에이전시</a>
+        <a target="_blank" href="https://goldsaju.com/">골드사주</a>
+        <a target="_blank" href="https://mindsource.kr/">멘탈케어</a>
     </div>
 </body>
 </html>
