--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <p>FreeProgrammer</p>
         <a target="_blank" href="https://omarian.notion.site/Stanly-Kim-fa5df4ab72c24fac9437ec7768c95ec5">프로필</a>
         <a target="_blank" href="https://pressco.kr">에이전시</a>
-        <a target="_blank" href="https://goldsaju.com/">골드사주</a>
-        <a target="_blank" href="https://mindsource.kr/">멘탈케어</a>
+        <a target="_blank" href="https://goldsaju.com/">마음케어</a>
+        <a target="_blank" href="https://spacedesign.com/">VR</a> 
     </div>
 </body>
 </html>
