--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             align-items: center;
         }
         .profile {
-            background-image: url('Stanly.png');
+            background-image: url('stanly.png');
             background-size: cover;
             background-position: center;
 
