--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta property="og:title" content="Stanly 링크 모음!">
     <meta property="og:description" content="STANLY IT의 모든 것">
     <meta property="og:image" content="stanly.png">
-    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
+    <!--<script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>-->
     <title>Stanly - 내 링크모음</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
