--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
     <div class="wrap">
         <div class="profile"></div>
-        <h1>Stanly</h1>
+        <h1>STANLY</h1>
         <p>FreeProgrammer</p>
         <a target="_blank" href="https://omarian.notion.site/Stanly-Kim-fa5df4ab72c24fac9437ec7768c95ec5">프로필</a>
         <a target="_blank" href="https://pressco.kr">에이전시</a>
